Merge 3.2/Trunk -> Grizzly2.x integration branch.
svn path=/branches/grizzly20/; revision=46657


Former-commit-id: 744ef17dbb2315dfa3c4266cf00d54195068f4bc